--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 </head>
 
 <body>
+<div class="container">
+    <p>Enter your text or URL</p>
+    <input type="text" placeholder="Text or URL">
+    <button>Generate QR-Code</button>
+</div>
 
 </body>
+
+
 </html>
